--- a/2.basic2/index.html
+++ b/2.basic2/index.html
@@ -21,6 +21,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script src="../examples/1-1.dotTodot.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
