--- a/1.basic/index.html
+++ b/1.basic/index.html
@@ -21,6 +21,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script src="../examples/1-1.dotTodot.js"></script>
+    <script src="../examples/2.dotTodot/2-1.dotTodot.js"></script>
 </body>
 </html>
